--- a/index.css
+++ b/index.css
@@ -2,3 +2,15 @@
     padding: 0;
     margin: 0;
 }
+body {
+    background-color: #3066be;
+    display: flex;
+    align-items: center; /* <-- Esto centra verticalmente */
+    justify-content: center;
+    height: 100vh;
+    width: 100vw;
+}
+img{
+    width: 30vw;
+    height: auto;
+}
